# rustpdfapi

./: Cargo.toml  README.md
src/: main.rs  pdf2text.rs
