[package]
name = "rustpdfapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
# parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
pdf-extract = "0.7.4"
whichlang = "0.1.0"
bytes = "1.0"
futures = { version="0.3.30", default-features = false }
uuid = { version = "0.8.2", features = ["v4"] }
